--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 /* Whitespace waar je mee begint wegwerken en de box sizing goed zetten. */
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 /* Tekstkleur (Pumpkin) Background (Night) Halloween Thema */
 body {
   background-color: #01110a;
   color: #ff8c42;
+  font-family: 'Raleway', sans-serif;
 }
 /* Navbar die simpel links staat */
 nav {
   display: flex;
   width: 100%;
-  padding: 2rem;
-  margin-left: 4rem;
+  justify-content: center;
+  padding-top: 2rem;
 }
 nav a {
   color: #ff8c42;
   text-decoration: none;
   margin: 0 2rem;
   font-size: 1.5rem;
+  font-weight: 500;
 }
 
 /* main */
-main {
+.hero {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,7 +42,102 @@ main {
 }
 .left h1 {
   padding: 1rem 0rem;
+  font-weight: 600;
 }
 .left p {
   width: 75%;
+  font-weight: 300;
+  text-align: justify;
 }
+
+.right img{
+  max-width: 100%;
+}
+
+/* About */
+.about{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: column;
+  width: 100vw;
+  height: 40vh;
+}
+.about h2{
+  margin-bottom: 1rem;
+}
+.about p{
+  width: 50%;
+  text-align: justify;
+}
+
+/* cards */
+.cards{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+.cards article{
+  margin: 0 5rem;
+}
+.cards img{
+  max-width: 80%;
+  border-radius: 1vw;
+  object-fit: cover;
+  vertical-align: middle;
+  height: auto;
+}
+ article{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+ article h3{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+ }
+ article p{
+  width: 75%;
+ }
+
+ @media (max-width: 1150px) {
+  nav{
+    flex-direction: column;
+    align-items: center;
+  }
+  nav a{
+    margin: 1rem 0rem;
+  }
+  .hero{
+    flex-direction: column;
+    height: 120vh;
+  }
+  .left{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .left h1{
+    margin: 0 1rem;
+  }
+
+  .left p{
+    text-align: center;
+  }
+  .cards{
+    flex-direction: column;
+    height: 150vh;
+  }
+  .cards img{
+    height: 50%;
+  }
+  .about p{
+    text-align: center;
+  }
+  article p{
+    text-align: center;
+  }
+ }
